[RED] Buat test untuk pengelolaan kost controller